--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="isPcView">
+<div class="container">
     <div class="top">
         <div class="reports">
             <app-reports></app-reports>
@@ -168,7 +168,7 @@
 
 </div>
 
-<div class="mobile" *ngIf="!isPcView">
+<!-- <div class="mobile" *ngIf="!isPcView">
     <app-reports></app-reports>
     <app-stats></app-stats>
     <div class="devices">
@@ -212,4 +212,4 @@
         </div>
     </div>
     <app-activity-details></app-activity-details>
-</div>
+</div> -->
