--- a/src/app/screens/chat-flow/chat-flow.component.css
+++ b/src/app/screens/chat-flow/chat-flow.component.css
@@ -66,14 +66,23 @@
     height: 100%;
 }
 
+.cards-tree {
+    display: flex;
+    gap: 115px;
+    padding: 4rem;
+    overflow: auto;
+}
+
 .card {
-    position: absolute;
-    cursor: pointer;
+    /* position: absolute; */
+    /* cursor: pointer; */
     user-select: none;
+    position: relative;
     border-radius: 12px;
     background: #FFF;
     box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
     padding: 1rem;
+    height: fit-content;
     min-width: 310px;
 }
 
@@ -89,6 +98,22 @@
     display: flex;
     align-items: center;
     gap: .75rem;
+}
+
+.card.conditional .card_top {
+    background-color: green;
+    border-radius: .6rem .6rem 0 0;
+    margin: -1rem;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    background: #2EBC96;
+    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
+}
+
+.card.conditional .card_top img {
+    width: 20px;
+    height: 20px;
+    flex-shrink: 0;
 }
 
 .top_dets {
@@ -114,6 +139,10 @@
     line-height: .9rem;
 }
 
+.card.conditional .top_dets h1 {
+    color: white;
+}
+
 .card_bottom {
     display: flex;
     flex-direction: column;
@@ -131,6 +160,62 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.card.main .card_bottom,
+.card.conditional .card_bottom {
+    background-color: transparent;
+    padding: 0;
+}
+
+.triggers {
+    display: flex;
+    flex-direction: column;
+}
+
+.trigger {
+    padding: .5rem 1rem;
+    text-align: center;
+    border-bottom: 1px solid #EEE;
+    background: #FFF;
+}
+
+.card.main .card_bottom p {
+    color: #737791;
+    font-family: Poppins;
+    font-size: .75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.add-btn {
+    border-radius: 5px;
+    border: 1px dashed #2EBC96;
+    background: #FFF;
+    padding: .5rem;
+    outline: none;
+    color: #2EBC96;
+    font-family: Poppins;
+    font-size: .75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 1rem;
+    cursor: pointer;
+}
+
+.bottom-text {
+    color: var(--Greys-Blue-Grey-700, #737791);
+    font-family: Poppins;
+    font-size: .75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    max-width: 20ch;
+    text-align: right;
+    margin-left: auto;
+    margin-top: 1rem;
 }
 
 .btns {
@@ -156,6 +241,25 @@
 
 .card.selected_card {
     box-shadow: 0 0 10px rgb(168, 168, 168);
+}
+
+.link-line {
+    border-radius: 15px;
+    position: absolute;
+    bottom: 1rem;
+    left: 100%;
+    z-index: 100;
+}
+
+.link-line::before {
+    content: "";
+    position: absolute;
+    right: calc(100% - 10px);
+    height: 15px;
+    width: 15px;
+    border: 2px solid #5A677D;
+    border-radius: 15px;
+    bottom: 0;
 }
 
 .edit_card {
