--- a/src/app/screens/block-list/block-list.component.css
+++ b/src/app/screens/block-list/block-list.component.css
@@ -472,3 +472,78 @@
     border-right: 10px solid #1A9096;
     border-bottom: 5px solid transparent;
 }
+
+.add-con {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    border-radius: 12px;
+    background: linear-gradient(273deg, #2EBC96 2.11%, #1A9096 121.12%);
+    padding: 1.5rem 3rem;
+    position: relative;
+}
+
+.close {
+    position: absolute;
+    border-radius: 5.343px;
+    border: none;
+    background: #FFF;
+    box-shadow: 0px 0px 5.343px 0px rgba(0, 0, 0, 0.10);
+    outline: none;
+    top: .6rem;
+    right: .6rem;
+    height: 25px;
+    width: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.add-con>.left {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    align-items: flex-end;
+}
+
+.inp_con {
+    min-width: 250px;
+    display: flex;
+    flex-direction: column;
+}
+
+.inp_con label {
+    color: #FFF;
+    font-size: .8rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: .2rem;
+}
+
+.inp_con select,
+.inp_con input {
+    border-radius: 9.418px;
+    border: 0.856px solid #D9D9D9;
+    background: rgba(217, 217, 217, 0.10);
+    outline: none;
+    padding: 1rem;
+    color: white;
+}
+
+.inp_con select option {
+    color: black;
+}
+
+.add-con .left button {
+    padding: 1.05rem 2rem;
+    background-color: white;
+    border-radius: .6rem;
+    border: none;
+    outline: none;
+    font-size: .9rem;
+    font-weight: 600;
+    cursor: pointer;
+}
