--- a/src/app/screens/block-list/block-list.component.html
+++ b/src/app/screens/block-list/block-list.component.html
@@ -1,119 +1,5 @@
-<!-- <main class="content">
-    <div class="table_container">
-        <div class="header">
-            <div class="left">
-                <form #f="ngForm" [formGroup]="phoneForm">
-                    <ngx-intl-tel-input [cssClass]="'custom'" [preferredCountries]="preferredCountries"
-                        [enableAutoCountrySelect]="true" [enablePlaceholder]="true" [searchCountryFlag]="true"
-                        [searchCountryField]="[
-                              SearchCountryField.Iso2,
-                              SearchCountryField.Name
-                            ]" [selectFirstCountry]="false" [selectedCountryISO]="CountryISO.India" [maxLength]="15"
-                        [phoneValidation]="true" [separateDialCode]="separateDialCode"
-                        [numberFormat]="PhoneNumberFormat.National" name="phone" formControlName="phone">
-                    </ngx-intl-tel-input>
-                </form>
-                <button class="service_btn" [class.active]="currentServiceType === 'whatsapp'"
-                    (click)="setServiceType('whatsapp')">
-                    <div class="dot"></div>
-                    <span>WhatsApp</span>
-                </button>
-                <button class="service_btn" [class.active]="currentServiceType === 'sms'"
-                    (click)="setServiceType('sms')">
-                    <div class="dot"></div>
-                    <span>SMS</span>
-                </button>
-            </div>
-            <div class="right">
-                <button class="add_btn">Add</button>
-            </div>
-        </div>
-
-        <div class="table_wrapper pc_view">
-            <table>
-                <thead>
-                    <tr>
-                        <th>No</th>
-                        <th>User Mobile Number</th>
-                        <th>WhatsApp</th>
-                        <th>SMS</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>01</td>
-                        <td>(+92) 308 0123456</td>
-                        <td>
-                            <div class="switch_box" [class.active]="true">
-                            </div>
-                        </td>
-                        <td>
-                            <div class="switch_box" [class.active]="false">
-                            </div>
-                        </td>
-                        <td>
-                            <img src="../../assets/icons/delete.svg" alt="d">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>01</td>
-                        <td>(+92) 308 0123456</td>
-                        <td>
-                            <div class="switch_box" [class.active]="false">
-                            </div>
-                        </td>
-                        <td>
-                            <div class="switch_box" [class.active]="true">
-                            </div>
-                        </td>
-                        <td>
-                            <img src="../../assets/icons/delete.svg" alt="d">
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="table_wrapper mobile_view">
-            <div class="item">
-                <span><strong>Number</strong></span>
-                <div>
-                    <span><strong>WhatsApp</strong></span>
-                    <span><strong>SMS</strong></span>
-                </div>
-            </div>
-            <div class="item">
-                <span>(+92) 307 0186322</span>
-                <div>
-                    <span>
-                        <div class="switch_box" [class.active]="true">
-                        </div>
-                    </span>
-                    <span>
-                        <div class="switch_box" [class.active]="false">
-                        </div>
-                    </span>
-                </div>
-            </div>
-            <div class="item">
-                <span>(+92) 307 0186322</span>
-                <div>
-                    <span>
-                        <div class="switch_box" [class.active]="true">
-                        </div>
-                    </span>
-                    <span>
-                        <div class="switch_box" [class.active]="false">
-                        </div>
-                    </span>
-                </div>
-            </div>
-        </div>
-    </div>
-</main> -->
-
 <div class="container">
-    <div class="top">
+    <div *ngIf="showBanner" class="top" (click)="this.showBanner = false">
         <p>
             Please note that “not sent” , might be because target is not valid mobile or international number or your
             settings are configured not be send this Message type by SMS.
@@ -130,14 +16,8 @@
     </div>
     <div class="table-top">
         <div class="tt-left">
-            <button [class.active]="true">
-                All Messages
-            </button>
-            <button>
-                WhatsApp
-            </button>
-            <button>
-                SMS
+            <button *ngFor="let t  of tabs" [class.active]="t === tab" (click)="this.tab = t">
+                {{t}}
             </button>
         </div>
         <div class="tt-right">
@@ -149,13 +29,37 @@
                 </svg>
                 <input type="search" placeholder="Search number here..">
             </div>
-            <button>
+            <button (click)="this.showAddCon=true">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M0 1.22273L0.877727 0.345001H7.89955L8.77727 1.22273V8.24455L7.89955 9.12227H0.877727L0 8.24455V1.22273ZM1.75545 2.10046V7.36682H7.02182V2.10046H1.75545ZM11.4105 0.345001L10.5327 1.22273V8.24455L11.4105 9.12227H18.4323L19.31 8.24455V1.22273L18.4323 0.345001H11.4105ZM12.2882 7.36682V2.10046H17.5545V7.36682H12.2882ZM15.7991 19.655H14.0436V16.1441H10.5327V14.3886H14.0436V10.8777H15.7991V14.3886H19.31V16.1441H15.7991V19.655ZM0.877727 10.8777L0 11.7555V18.7773L0.877727 19.655H7.89955L8.77727 18.7773V11.7555L7.89955 10.8777H0.877727ZM1.75545 17.8995V12.6332H7.02182V17.8995H1.75545Z"
                         fill="white" />
                 </svg>
                 <span>Add New</span>
+            </button>
+        </div>
+    </div>
+    <div *ngIf="showAddCon" class="add-con">
+        <button (click)="this.showAddCon=false" class="close"><svg xmlns="http://www.w3.org/2000/svg" width="13"
+                height="13" viewBox="0 0 13 13" fill="none">
+                <path d="M12.0278 11.6573L0.808298 1.34253M12.0278 1.34253L0.808298 11.6573" stroke="#2EBC96"
+                    stroke-width="1.60279" stroke-linecap="round" stroke-linejoin="round" />
+            </svg></button>
+        <div class="left">
+            <div class="inp_con">
+                <label for="">Phone</label>
+                <input type="tel" [(ngModel)]="phone">
+            </div>
+            <div class="inp_con">
+                <label for="">Target</label>
+                <select>
+                    <option value="">Select Target</option>
+                    <option value="sms">SMS</option>
+                    <option value="whatsapp">WhatsApp</option>
+                </select>
+            </div>
+            <button [disabled]="!phone || isLoad || !type" (click)="addBlacklistUser()">
+                Save
             </button>
         </div>
     </div>
@@ -168,43 +72,54 @@
                 <div class="ti-item">SMS</div>
                 <div class="ti-item">Actions</div>
             </div>
-            <div class="t-item">
-                <div class="ti-item">1</div>
-                <div class="ti-item">+923070186322</div>
-                <div class="ti-item">
-                    <div class="switch_box" [class.active]="true">
-                    </div>
-                </div>
-                <div class="ti-item">
-                    <div class="switch_box" [class.active]="false">
-                    </div>
-                </div>
-                <div class="ti-item actions">
-                    <button style="--content: 'Delete';">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="22" viewBox="0 0 24 22" fill="none">
-                            <path
-                                d="M18.0038 21.0541H6.15764C5.70881 21.0541 5.27837 20.8758 4.961 20.5585C4.64363 20.2411 4.46533 19.8106 4.46533 19.3618V4.13104H19.6961V19.3618C19.6961 19.8106 19.5178 20.2411 19.2004 20.5585C18.8831 20.8758 18.4526 21.0541 18.0038 21.0541Z"
-                                stroke="#615E83" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M9.5415 15.9764V9.20718" stroke="#615E83" stroke-width="1.3" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path d="M14.6191 15.9764V9.20718" stroke="#615E83" stroke-width="1.3"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M1.08008 4.13104H23.0801" stroke="#615E83" stroke-width="1.3"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                            <path
-                                d="M14.6184 0.745972H9.54143C9.0926 0.745972 8.66216 0.924268 8.34479 1.24164C8.02742 1.55901 7.84912 1.98945 7.84912 2.43828V4.13059H16.3107V2.43828C16.3107 1.98945 16.1324 1.55901 15.815 1.24164C15.4976 0.924268 15.0672 0.745972 14.6184 0.745972Z"
-                                stroke="#615E83" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </button>
-                    <button style="--content: 'Edit';">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" fill="none">
-                            <path
-                                d="M21.0139 2.42608C20.6972 2.11071 20.3211 1.86122 19.9074 1.69203C19.4938 1.52283 19.0507 1.43727 18.6037 1.44029C18.1568 1.44332 17.7149 1.53487 17.3035 1.70965C16.8922 1.88444 16.5195 2.13899 16.2071 2.45862L2.72573 15.94L1.08008 22.3599L7.5 20.7133L20.9814 7.23195C21.3011 6.91968 21.5557 6.54713 21.7305 6.13585C21.9054 5.72456 21.997 5.2827 22 4.8358C22.003 4.3889 21.9174 3.94584 21.7482 3.53222C21.5789 3.11861 21.3294 2.74265 21.0139 2.42608V2.42608Z"
-                                stroke="#615E83" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </button>
-                </div>
+            <div *ngIf="isLoad" style="padding: 2rem; width: 100%; display: flex; justify-content: center;">
+                <app-loader></app-loader>
             </div>
+            <ng-container *ngIf="!isLoad">
+                <div *ngFor="let it of blacklist; let i = index" class="t-item">
+                    <div class="ti-item">{{i+ 1}}</div>
+                    <div class="ti-item">{{it?.phone}}</div>
+                    <div class="ti-item">
+                        <div class="switch_box" [class.active]="it?.whatsapp"
+                            (click)="blockWhatsApp(!it.whatsapp, it.user_id, i)">
+                        </div>
+                    </div>
+                    <div class="ti-item">
+                        <div class="switch_box" [class.active]="it?.sms" (click)="blockSms(!it.sms, it.user_id, i)">
+                        </div>
+                    </div>
+                    <div class="ti-item actions">
+                        <button style="--content: 'Delete';" (click)="deleteBlacklistUser(it.user_id, i)">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="22" viewBox="0 0 24 22"
+                                fill="none">
+                                <path
+                                    d="M18.0038 21.0541H6.15764C5.70881 21.0541 5.27837 20.8758 4.961 20.5585C4.64363 20.2411 4.46533 19.8106 4.46533 19.3618V4.13104H19.6961V19.3618C19.6961 19.8106 19.5178 20.2411 19.2004 20.5585C18.8831 20.8758 18.4526 21.0541 18.0038 21.0541Z"
+                                    stroke="#615E83" stroke-width="1.3" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path d="M9.5415 15.9764V9.20718" stroke="#615E83" stroke-width="1.3"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M14.6191 15.9764V9.20718" stroke="#615E83" stroke-width="1.3"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M1.08008 4.13104H23.0801" stroke="#615E83" stroke-width="1.3"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path
+                                    d="M14.6184 0.745972H9.54143C9.0926 0.745972 8.66216 0.924268 8.34479 1.24164C8.02742 1.55901 7.84912 1.98945 7.84912 2.43828V4.13059H16.3107V2.43828C16.3107 1.98945 16.1324 1.55901 15.815 1.24164C15.4976 0.924268 15.0672 0.745972 14.6184 0.745972Z"
+                                    stroke="#615E83" stroke-width="1.3" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </button>
+                        <button style="--content: 'Edit';">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
+                                fill="none">
+                                <path
+                                    d="M21.0139 2.42608C20.6972 2.11071 20.3211 1.86122 19.9074 1.69203C19.4938 1.52283 19.0507 1.43727 18.6037 1.44029C18.1568 1.44332 17.7149 1.53487 17.3035 1.70965C16.8922 1.88444 16.5195 2.13899 16.2071 2.45862L2.72573 15.94L1.08008 22.3599L7.5 20.7133L20.9814 7.23195C21.3011 6.91968 21.5557 6.54713 21.7305 6.13585C21.9054 5.72456 21.997 5.2827 22 4.8358C22.003 4.3889 21.9174 3.94584 21.7482 3.53222C21.5789 3.11861 21.3294 2.74265 21.0139 2.42608V2.42608Z"
+                                    stroke="#615E83" stroke-width="1.3" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </ng-container>
         </div>
     </div>
 </div>
