--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -73,7 +73,7 @@
                     </li>
                 </a>
                 <a [routerLink]="'/chatbot/bot-settings'">
-                    <li (click)="setCurrentSubItem('Customers')" [class.active]="currentSubItem === 'Bot Settings'"
+                    <li (click)="setCurrentSubItem('Bot Settings')" [class.active]="currentSubItem === 'Bot Settings'"
                         class="sub_menu_item">
                         <img src="../../../assets/icons/bot-settings.svg"
                             style="height: 30px; width: 30px; object-fit: contain;">
