--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -105,5 +105,56 @@
         <div class="c-bg-heading">
             Query list
         </div>
+        <div class="q-l">
+            <div class="q-l-tags">
+                <h1>User Query</h1>
+                <div class="q-l-t-bot">
+                    <button class="new">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                            <rect x="0.5" y="1" width="23" height="23" rx="11.5" stroke="white" />
+                            <path
+                                d="M4.8545 11.5526C4.33128 11.5526 3.90713 11.9767 3.90713 12.4999C3.90713 13.0231 4.33128 13.4473 4.8545 13.4473L11.0526 13.4473L11.0526 19.6454C11.0526 20.1686 11.4768 20.5928 12 20.5928C12.5232 20.5928 12.9474 20.1686 12.9474 19.6454L12.9474 13.4473L19.1455 13.4473C19.6687 13.4473 20.0929 13.0231 20.0929 12.4999C20.0929 11.9767 19.6687 11.5526 19.1455 11.5526L12.9474 11.5526L12.9474 5.35443C12.9474 4.83121 12.5232 4.40706 12 4.40706C11.4768 4.40706 11.0526 4.83121 11.0526 5.35443L11.0526 11.5526L4.8545 11.5526Z"
+                                fill="white" />
+                        </svg>
+                        <span>Enter a new tag</span>
+                    </button>
+                    <div class="q-l-t-tag">
+                        <input type="text" value="cbl400">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                            <rect x="0.5" y="1" width="23" height="23" rx="11.5" stroke="#737791" />
+                            <path
+                                d="M6.27748 16.8827C5.90751 17.2527 5.90751 17.8526 6.27748 18.2225C6.64745 18.5925 7.24729 18.5925 7.61726 18.2225L12 13.8398L16.3827 18.2225C16.7527 18.5925 17.3525 18.5925 17.7225 18.2225C18.0925 17.8526 18.0925 17.2527 17.7225 16.8827L13.3398 12.5L17.7225 8.11726C18.0925 7.74729 18.0925 7.14745 17.7225 6.77748C17.3525 6.40751 16.7527 6.40751 16.3827 6.77748L12 11.1602L7.61726 6.77748C7.24729 6.40751 6.64745 6.40751 6.27748 6.77748C5.90751 7.14745 5.90751 7.74729 6.27748 8.11726L10.6602 12.5L6.27748 16.8827Z"
+                                fill="#737791" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+
+            <div class="q-l-alt">
+                <h1>Alternatives</h1>
+                <div class="field">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+                        <path
+                            d="M23.869 2.13102C23.5056 1.76922 23.0742 1.483 22.5996 1.28889C22.125 1.09477 21.6167 0.996618 21.1039 1.00009C20.5912 1.00356 20.0842 1.10859 19.6123 1.30911C19.1403 1.50963 18.7128 1.80167 18.3544 2.16836L2.88797 17.6348L1 25L8.36522 23.111L23.8316 7.64454C24.1984 7.28629 24.4906 6.85888 24.6911 6.38704C24.8917 5.91519 24.9968 5.40827 25.0003 4.89557C25.0037 4.38287 24.9056 3.87456 24.7114 3.40005C24.5172 2.92553 24.2309 2.49421 23.869 2.13102V2.13102Z"
+                            stroke="#615E83" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    <input type="text" placeholder="Enter alternative user query">
+                </div>
+                <div class="q-l-a-bot">
+                    <div class="check">
+                        <input type="checkbox" name="airport" id="airport">
+                        <label for="airport">Airpot Address</label>
+                    </div>
+                    <button>Update</button>
+                </div>
+            </div>
+
+            <div class="q-l-table">
+                <div class="q-l-t-header">
+                    <span>Bot Query</span>
+                    <span>User Queries</span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
