--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -2,8 +2,21 @@
     <!-- <app-messages-sidebar></app-messages-sidebar> -->
     <div>
         <div class="tabs">
-            <div class="tab" *ngFor="let t of tabs" [class.active]="tab === t.name" (click)="selectTab(t.name)">
-                {{t.name}}</div>
+            <div class="tab" [class.active]="tab === 'booking'" (click)="openMessageList('booking')">Booking</div>
+            <div class="tab" [class.active]="tab === 'tracking'" (click)="openMessageList('tracking')">Tracking</div>
+            <div class="tab" [class.active]="tab === 'arrived'" (click)="openMessageList('arrived')">Arrived</div>
+            <div class="tab" [class.active]="tab === 'paylink'" (click)="openMessageList('paylink')">Paylink</div>
+            <div class="tab" [class.active]="tab === 'prepay'" (click)="openMessageList('prepay')">PrePay</div>
+            <div class="tab" [class.active]="tab === 'review'" (click)="openMessageList('review')">Review</div>
+            <div class="tab" [class.active]="tab === 'dreview'" (click)="openMessageList('dreview')">Driver</div>
+            <div class="tab" [class.active]="tab === 'noshow'" (click)="openMessageList('noshow')">No Show</div>
+            <div class="tab" [class.active]="tab === 'preauth'" (click)="openMessageList('preauth')">Pre Auth</div>
+            <div class="tab" [class.active]="tab === 'custom1'" (click)="openMessageList('custom1')">Custom 1</div>
+            <div class="tab" [class.active]="tab === 'custom2'" (click)="openMessageList('custom2')">Custom 2</div>
+            <div class="tab" [class.active]="tab === 'chatbot'" (click)="openMessageList('chatbot')">Chatbot</div>
+            <div class="tab" [class.active]="tab === 'missedcall'" (click)="openMessageList('missedcall')">Missed Calls
+            </div>
+            <div class="tab" [class.active]="tab === 'late'" (click)="openMessageList('late')">Late</div>
         </div>
     </div>
     <div class="right">
@@ -24,21 +37,25 @@
         </button> -->
         </div>
         <div class="instance_grid">
-            <div class="instance_card" *ngFor="let instance of instanceData.slice(0, 3)">
-                <div class="ic_top">
-                    <h4>{{instance.name}}</h4>
-                    <div class="ict_right">
-                        <span class="limit_text" *ngIf="instance.limit > 0 && instance.isEditable">
-                            {{instance.value.length}} / {{instance.limit}} characters
-                        </span>
-                        <button class="edit" (click)="toggleEdit(instance.id)">
-                            <img src="../../assets/icons/edit.svg" alt="e">
-                            <span>{{instance.isEditable ? "Save": "Edit"}}</span>
-                        </button>
+            <div class="instance_card"
+                *ngFor="let instance of currentMessageList.slice(0, currentMessageList.length-1);let i = index;">
+                <div>
+                    <div class="ic_top">
+                        <h4>{{currentList}} Message {{i+1}}</h4>
+                        <div class="ict_right">
+                            <span class="limit_text" *ngIf="instance.limit > 0 && instance.isEditable">
+                                {{instance.value.length}} / {{instance.limit}} characters
+                            </span>
+                            <button class="edit" (click)="toggleEdit(instance.id)">
+                                <img src="../../assets/icons/edit.svg" alt="e">
+                                <span>{{instance.isEditable ? "Save": "Edit"}}</span>
+                            </button>
+                        </div>
                     </div>
+                    <!-- <textarea [disabled]="!instance.isEditable" [(ngModel)]="instance.value"
+                        (ngModelChange)="onTextAreaChange(instance, $event)" placeholder="Type here..."></textarea> -->
+                    <textarea value="instance" placeholder="Type here..."></textarea>
                 </div>
-                <textarea [disabled]="!instance.isEditable" [(ngModel)]="instance.value"
-                    (ngModelChange)="onTextAreaChange(instance, $event)" placeholder="Type here..."></textarea>
             </div>
         </div>
 
