--- a/src/app/screens/chat-flow/chat-flow.component.css
+++ b/src/app/screens/chat-flow/chat-flow.component.css
@@ -153,7 +153,7 @@
     padding: .75rem;
 }
 
-.card_bottom p {
+.card_bottom p,.card_bottom textarea {
     color: #737791;
     font-family: Poppins;
     font-size: .75rem;
@@ -161,6 +161,7 @@
     font-weight: 400;
     line-height: normal;
 }
+
 
 .card.main .card_bottom,
 .card.conditional .card_bottom {
@@ -493,4 +494,62 @@
     font-size: 1.25rem;
     font-weight: 700;
     border-radius: .5rem;
+}
+
+.message-edit{
+min-width: 23rem;
+padding: 1rem 0rem;
+}
+
+.message-edit-box{
+    padding: 1rem;
+    background-color: #fcfcfc;
+    border-radius: 0.6rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.save-button {
+    border: none;
+    outline: none;
+    padding: .7rem 2rem;
+    border-radius: .6rem;
+    font-size: 1rem;
+    font-weight: 700;
+    color: #fff;
+    cursor: pointer;
+    background-color: #2ebc96;
+}
+
+.cancel-button {
+    border: none;
+    outline: none;
+    padding: .7rem 2rem;
+    border-radius: .6rem;
+    font-size: 1rem;
+    font-weight: 700;
+    color: #2ebc96;
+    cursor: pointer;
+    border-color: #2ebc96;
+}
+
+
+.edit-input{
+    border: none;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 9px 0px #f0f0f0;
+    border-radius: 8px;
+    resize: none;
+    padding: 10px;
+}
+
+.edit-textarea{
+    border: none;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 9px 0px #f0f0f0;
+    border-radius: 8px;
+    resize: none;
+    padding: 10px;
 }
