--- a/src/app/screens/chat-flow/chat-flow.component.html
+++ b/src/app/screens/chat-flow/chat-flow.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <div class="kanban">Chatbot <strong> / Bookings</strong></div>
+        <div class="kanban">Chatbot <strong> / Chat Flow</strong></div>
         <button>
             <img src="../../../assets/save.png">
             <span>Save Changes</span>
