--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -109,18 +109,31 @@
 
 .logout {
     position: absolute;
-    top: 100%;
+    top: 120%;
     right: 0;
+    border-radius: 9px;
+    border: 1px solid #E5E5ED;
+    background: #FFF;
+    padding: 1rem;
 }
 
 .logout button {
-    padding: 1rem 6rem;
+    padding: 1rem 4rem;
     border: none;
     outline: none;
-    background-color: white;
-    border-radius: .6rem;
+    border-radius: 8px;
+    background: linear-gradient(0deg, #2EBC96 0%, #1A9096 100%);
+    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
     font-size: 1rem;
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: .6rem;
     font-weight: 500;
-    box-shadow: 0 0 10px #caceca;
     cursor: pointer;
+}
+
+.logout button svg {
+    width: 20px;
+    height: 20px;
 }
