--- a/src/app/screens/devices/devices.component.html
+++ b/src/app/screens/devices/devices.component.html
@@ -228,7 +228,7 @@
             <button>
                 <span>All Messages</span>
             </button>
-            <button class="filter">
+            <button class="filter" (click)="showFilters = true">
                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="14" viewBox="0 0 21 14" fill="none">
                     <path d="M2 1.79053H18.67M5.12556 6.9999H15.5443M9.29302 12.2093H11.3768" stroke="white"
                         stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
@@ -236,9 +236,9 @@
                 <span>Filters</span>
             </button>
         </div>
-        <div class="filters">
-            <button class="close"><svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13"
-                    fill="none">
+        <div *ngIf="showFilters" class="filters">
+            <button (click)="showFilters = false" class="close"><svg xmlns="http://www.w3.org/2000/svg" width="13"
+                    height="13" viewBox="0 0 13 13" fill="none">
                     <path d="M12.0278 11.6573L0.808298 1.34253M12.0278 1.34253L0.808298 11.6573" stroke="#2EBC96"
                         stroke-width="1.60279" stroke-linecap="round" stroke-linejoin="round" />
                 </svg></button>
