--- a/src/app/screens/broadcast-sms/broadcast-sms.component.html
+++ b/src/app/screens/broadcast-sms/broadcast-sms.component.html
@@ -65,9 +65,9 @@
                             <option value="">test</option>
                         </select>
                     </div>
-                    <div class="inp-con">
+                    <div class="inp-con message">
                         <label for="">Message</label>
-                        <textarea placeholder="Type message here"></textarea>
+                        <textarea placeholder=" Type message here"></textarea>
                     </div>
                 </div>
             </div>
