--- a/src/app/screens/broadcast-whatsapp/broadcast-whatsapp.component.html
+++ b/src/app/screens/broadcast-whatsapp/broadcast-whatsapp.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="header">
-        <div class="kanban">Broadcast <strong> / WhatsApp</strong></div>
-        <button (click)="this.addMode = true" *ngIf="!addMode">
+        <div class="kanban">Broadcast <strong> / WhatsApp {{showTemplates ? "/ Add New Template" : ""}}</strong></div>
+        <button (click)="this.showTemplates = true" *ngIf="!showTemplates && !addMode">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M0 1.2227L0.877727 0.344971H7.89955L8.77727 1.2227V8.24452L7.89955 9.12224H0.877727L0 8.24452V1.2227ZM1.75545 2.10043V7.36679H7.02182V2.10043H1.75545ZM11.4105 0.344971L10.5327 1.2227V8.24452L11.4105 9.12224H18.4323L19.31 8.24452V1.2227L18.4323 0.344971H11.4105ZM12.2882 7.36679V2.10043H17.5545V7.36679H12.2882ZM15.7991 19.655H14.0436V16.1441H10.5327V14.3886H14.0436V10.8777H15.7991V14.3886H19.31V16.1441H15.7991V19.655ZM0.877727 10.8777L0 11.7554V18.7772L0.877727 19.655H7.89955L8.77727 18.7772V11.7554L7.89955 10.8777H0.877727ZM1.75545 17.8995V12.6332H7.02182V17.8995H1.75545Z"
@@ -9,13 +9,21 @@
             </svg>
             <span>Add New Broadcast</span>
         </button>
+        <button (click)="this.addMode = true; this.showTemplates = false;" *ngIf="!addMode && showTemplates">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M0 1.2227L0.877727 0.344971H7.89955L8.77727 1.2227V8.24452L7.89955 9.12224H0.877727L0 8.24452V1.2227ZM1.75545 2.10043V7.36679H7.02182V2.10043H1.75545ZM11.4105 0.344971L10.5327 1.2227V8.24452L11.4105 9.12224H18.4323L19.31 8.24452V1.2227L18.4323 0.344971H11.4105ZM12.2882 7.36679V2.10043H17.5545V7.36679H12.2882ZM15.7991 19.655H14.0436V16.1441H10.5327V14.3886H14.0436V10.8777H15.7991V14.3886H19.31V16.1441H15.7991V19.655ZM0.877727 10.8777L0 11.7554V18.7772L0.877727 19.655H7.89955L8.77727 18.7772V11.7554L7.89955 10.8777H0.877727ZM1.75545 17.8995V12.6332H7.02182V17.8995H1.75545Z"
+                    fill="white" />
+            </svg>
+            <span>Create New Tempate</span>
+        </button>
     </div>
 
     <ng-container *ngIf="addMode">
         <div class="add-top">
-            <h1>SMS Create Broadcast</h1>
+            <h1>WhatsApp Create Template</h1>
             <div class="btns">
-                <button>Send</button>
+                <button>Send After Approval</button>
                 <button>
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32"
                         height="32" viewBox="0 0 32 32" fill="none">
@@ -46,66 +54,59 @@
                 </div>
                 <div class="fields">
                     <div class="inp-con">
-                        <label for="">Broadcast Name</label>
+                        <label for="">Template Name</label>
                         <input type="text" placeholder="Enter in English">
                     </div>
+                    <p>New templates require Meta approval. It usually takes a few minutes, but can take up to 24 hours.
+                    </p>
                     <div class="inp-con">
-                        <label for="">Delay Time (seconds)</label>
-                        <input type="text" placeholder="Enter in English">
-                    </div>
-                    <div class="inp-con">
-                        <label for="">Update Excel Sheet</label>
-                        <input type="file">
-                    </div>
-                    <div class="inp-con">
-                        <label for="">Contacts Column</label>
                         <select>
+                            <option value="">Select Message Type</option>
                             <option value="">test</option>
                             <option value="">test</option>
                             <option value="">test</option>
                         </select>
                     </div>
                     <div class="inp-con">
+                        <select>
+                            <option value="">Select Message Language</option>
+                            <option value="">test</option>
+                            <option value="">test</option>
+                            <option value="">test</option>
+                        </select>
+                    </div>
+                    <div class="inp-con">
+                        <label>Header <span>Optional</span></label>
+                        <div class="icons">
+
+                        </div>
+                    </div>
+                    <div class="inp-con message">
                         <label for="">Message</label>
                         <textarea placeholder="Type message here"></textarea>
+                    </div>
+                    <div class="inp-con">
+                        <label>Footer <span>Optional</span></label>
+                        <input type="text" placeholder="Footer Text">
+                    </div>
+                    <div class="inp-con">
+                        <label>Button <span>Optional</span></label>
+                        <select>
+                            <option value="">Select Button Type</option>
+                            <option value="">test</option>
+                            <option value="">test</option>
+                            <option value="">test</option>
+                        </select>
                     </div>
                 </div>
             </div>
             <div class="mobile-con">
-                <img src="../../../assets/mobile.png" alt="" class="mobile">
-            </div>
-            <div class="contacts">
-                <div class="c-header">
-                    <h1>
-                        Contact List
-                    </h1>
-                    <p>
-                        <strong>TOTAL NO:</strong>
-                        <span>10</span>
-                    </p>
-                </div>
-                <div class="c-list">
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                    <div>03070186322</div>
-                </div>
+                <img src="../../../assets/w-mobile.png" alt="" class="mobile">
             </div>
         </div>
     </ng-container>
 
-    <ng-container *ngIf="!addMode">
+    <ng-container *ngIf="!showTemplates && !addMode">
         <div class="g-bg-head">
             Drafts
         </div>
@@ -170,6 +171,64 @@
 
         <div class="no-history">
             Nothing is here
+        </div>
+    </ng-container>
+
+
+    <!-- templates  -->
+    <ng-container *ngIf="!addMode && showTemplates">
+        <div class="g-bg-head">
+            All Templates
+        </div>
+
+        <div class="table-wrapper">
+            <div class="table">
+                <div class="t-item template t-item-h">
+                    <div class="ti-item">Date & Time</div>
+                    <div class="ti-item">Template Name</div>
+                    <div class="ti-item">Last Edit</div>
+                    <div class="ti-item">Status</div>
+                    <div class="ti-item">Action</div>
+                </div>
+                <div class="t-item template" *ngFor="let template of templates">
+                    <div class="ti-item">{{template.date}}</div>
+                    <div class="ti-item">{{template.name}}</div>
+                    <div class="ti-item message">{{template.lastEdit}}</div>
+                    <div class="ti-item">
+                        <div class="badge" [class]="template.status.toLowerCase()">{{template.status}}</div>
+                    </div>
+                    <div class="ti-item">
+                        <button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="23" viewBox="0 0 24 23"
+                                fill="none">
+                                <path
+                                    d="M17.9232 21.6538H6.07707C5.62825 21.6538 5.1978 21.4755 4.88043 21.1581C4.56306 20.8408 4.38477 20.4103 4.38477 19.9615V4.73071H19.6155V19.9615C19.6155 20.4103 19.4372 20.8408 19.1199 21.1581C18.8025 21.4755 18.3721 21.6538 17.9232 21.6538Z"
+                                    stroke="#24CC63" stroke-width="1.3" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path d="M9.46094 16.5761V9.80688" stroke="#24CC63" stroke-width="1.3"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M14.5391 16.5761V9.80688" stroke="#24CC63" stroke-width="1.3"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M1 4.73071H23" stroke="#24CC63" stroke-width="1.3" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path
+                                    d="M14.5388 1.3457H9.46184C9.01301 1.3457 8.58257 1.524 8.2652 1.84137C7.94783 2.15874 7.76953 2.58918 7.76953 3.03801V4.73032H16.2311V3.03801C16.2311 2.58918 16.0528 2.15874 15.7354 1.84137C15.418 1.524 14.9876 1.3457 14.5388 1.3457Z"
+                                    stroke="#24CC63" stroke-width="1.3" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </button>
+                        <button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
+                                fill="none">
+                                <path
+                                    d="M20.9338 2.0259C20.6171 1.71053 20.2411 1.46105 19.8274 1.29185C19.4137 1.12265 18.9706 1.03709 18.5236 1.04012C18.0767 1.04314 17.6348 1.13469 17.2234 1.30948C16.8121 1.48426 16.4394 1.73882 16.127 2.05844L2.64566 15.5398L1 21.9597L7.41992 20.3131L20.9013 6.83177C21.221 6.5195 21.4756 6.14695 21.6505 5.73567C21.8253 5.32438 21.9169 4.88252 21.9199 4.43562C21.9229 3.98873 21.8374 3.54566 21.6681 3.13205C21.4988 2.71843 21.2493 2.34247 20.9338 2.0259V2.0259Z"
+                                    stroke="#615E83" stroke-width="1.3" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </ng-container>
 </div>
