update settings page

--- a/src/app/screens/app-settings/app-settings.component.css
+++ b/src/app/screens/app-settings/app-settings.component.css
@@ -1,6 +1,7 @@
   .container {
       display: flex;
       gap: 1rem;
+      min-height: 75vh;
   }
 
   .left {
@@ -175,4 +176,76 @@
       font-style: normal;
       font-weight: 500;
       line-height: normal;
+  }
+
+  .profile-settings {
+      display: flex;
+      gap: 1rem;
+      margin-top: 3rem;
+  }
+
+  .ps-left {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      flex: 1;
+  }
+
+  .ps-right {
+      display: flex;
+      flex: .75;
+      align-items: center;
+      justify-content: center;
+  }
+
+  .ps-right img {
+      width: 60%;
+  }
+
+  .field {
+      display: flex;
+      align-items: center;
+      gap: 1.5rem;
+      justify-content: space-between;
+  }
+
+  .field label {
+      flex: 1;
+      color: #151D48;
+      leading-trim: both;
+      text-edge: cap;
+      font-family: Poppins;
+      font-size: 1.1rem;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      letter-spacing: -0.36px;
+  }
+
+  .input {
+      flex: 1.25;
+      border-radius: 9px;
+      border: 1px solid #E5E5ED;
+      position: relative;
+  }
+
+  .input input {
+      width: 100%;
+      padding: .75rem;
+      border: none;
+      outline: none;
+      background-color: transparent;
+      color: #768396;
+      font-size: .9rem;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+  }
+
+  .input svg {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 1rem;
+      cursor: pointer;
   }
